--- a/.docker/build
+++ b/.docker/build
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-apt update && apt upgrade
+apt update && apt upgrade -y
 apt install -y openssh-sftp-server tor
 apt clean
 mkdir /var/run/sshd
